# python-cons

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  tests.yml
cons/: __init__.py  _version.py  core.py  unify.py
tests/: test_cons.py
